--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,7 +1,7 @@
 html,
 body {
 	margin: 0;
-	padding: 0;
+	/*padding: 0;*/
 }
 
 button {
@@ -114,6 +114,7 @@ body {
 	position: relative;
 	margin: 0;
 	width: 100%;
+    height: 65px;
 	font-size: 24px;
 	font-family: inherit;
 	line-height: 1.4em;
