--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,14 @@
     <%= menu_group do %>
         <%= menu_item "Home", root_path %>
         <%= menu_divider %>
-        <%= drop_down "Products" do %>
-            <%= menu_item "Things you can't afford" %>
-            <%= menu_item "Things that won't suit you anyway" %>
-            <%= menu_item "Things you're not even cool enough to buy anyway" %>
+        <%= menu_item "Field" %>
+        <%= menu_item "Processor" %>
+        <%= menu_item "Label Lookup" %>
+        <%= drop_down "Company" do %>
+            <%= menu_item "About Us" %>
+            <%= menu_item "Press" %>
+            <%= menu_item "Contact" %>
         <% end %>
-        <%= menu_item "About Us" %>
-        <%= menu_item "Contact" %>
     <% end %>
     <%= menu_group :pull => :right do %>
         <li><input type="text" class="input-medium search-query">
