--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -25,7 +25,7 @@ body {
 	line-height: 1.4em;
 	background: #eaeaea url('/assets/bg.png');
 	color: #4d4d4d;
-	width: 550px;
+	/*width: 550px;*/
 	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
@@ -35,7 +35,8 @@ body {
 }
 
 #todoapp {
-	background: #fff;
+    width: 500px;
+    background: #fff;
 	background: rgba(255, 255, 255, 0.9);
 	margin: 130px 0 40px 0;
 	border: 1px solid #ccc;
