--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script type="text/x-handlebars">
-  <%= render "navbar" %>
+  <%= render 'layouts/navbar' %>
 
   <div class="container">
     <div class="row">
